Make golden cards brighter in dark mode

--- a/app/assets/stylesheets/_global.css
+++ b/app/assets/stylesheets/_global.css
@@ -324,9 +324,7 @@
 
     --color-terminal-bg: var(--color-canvas);
     --color-terminal-text-light: oklch(var(--lch-green-dark));
-    --color-golden: oklch(var(--lch-blue-light));
-    --color-golden: oklch(50% 0.178 95.7);
-    --color-golden: oklch(var(--lch-yellow-light));
+    --color-golden: oklch(var(--lch-blue-medium));
 
     --shadow: 0 0 0 1px oklch(var(--lch-black) / 0.42),
               0 .2em 1.6em -0.8em oklch(var(--lch-black) / 0.6),
