Fix caching issue
We need to pass an array so that it derives the relation key from the last updated record in the association

--- a/app/views/collections/show/_stream.html.erb
+++ b/app/views/collections/show/_stream.html.erb
@@ -1,4 +1,4 @@
-<% cache page.records do %>
+<% cache [ page.records ] do %>
   <section id="the-stream" class="cards cards--considering"
     data-drag-and-drop-target="container"
     data-action="turbo:before-morph-attribute->collapsible-columns#preventToggle"
